SunsetsIO/wwwroot/css/site.css
html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 60px;
}

.centered {
    display: flex;
    width: 100vw;
    height: 100vh;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.loader {
    display: inline-block;
    border: 0.13em solid #f3f3f3; /* Light grey */
    border-top: 0.13em solid #3498db; /* Blue */
    border-radius: 50%;
    animation: spin 1s linear infinite;
    height: 0.8em;
    width: 0.8em;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

.parent {
    border-bottom: 5px solid black;
}

.time-block {
    border: 1px solid black;
}

.timeRow {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.sunsetTimer {
    display: none;
    margin-top: 1em;
}

